# Tenio

./: .gitignore  README.md  claim-status-ops-handoff.md  docker-compose.yml  package-lock.json  package.json  payer-portal-automation-dev-plan.md  tsconfig.base.json
.github/workflows/: ci.yml
.tools/gh/: gh
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: agent-run.test.ts  (+19 more)
apps/web/: .env.local.example  instrumentation-client.ts  jest.config.mjs  next.config.ts  package.json  proxy.ts  sentry.server.config.ts
apps/worker/: .env.example  package.json  tsconfig.json
docs/: agentic-layer.md  app-what-it-is.md  architecture.md  canada-first-product-plan.md  canadian-trust-pack.md  customer-onboarding-playbook.md  customer-readiness-packet.md  design-partner-go-no-go.md  design-partner-launch.md  design-partner-support-runbook.md  founder-pitch.md  hosted-customer-readiness.md  icp-wedge-strategy.md  marketing-homepage-design-spec.md  ottawa-pilot-prospecting.md  pilot-risks-and-success-metrics.md  pilot-runbook.md  product-roadmap.md  production-mvp-runbook.md  sales-one-pager.md  security-architecture.md  security-trust-summary.md  support-traceability-sheet.md  telus-integration-readiness.md  tenio-explained-for-friends.md  tomorrow-demo-runbook.md  website-messaging.md
services/ai/: .env.example  README.md  pyproject.toml
services/ai/app/: main.py  schemas.py
services/ai/tenio_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai/tests/: test_http.py  test_main.py
services/connectors/: package.json  tsconfig.json
(+113 files in other folders)
