[project]
name = "tenio-ai-service"
version = "0.1.0"
description = "Python AI service for claim status analysis."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "openai>=1.0.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
