[project]
name = "tenio-ai-service"
version = "0.1.0"
description = "Python AI service for claim status analysis."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
